[package]
name = "sawtooth-devmode-engine-rust"
version = "1.2.3"
authors = ["Intel Corporation"]
description = "Hyperledger Sawtooth DevMode Rust consensus engine"

[[bin]]
name = "devmode-engine-rust"
path = "src/main.rs"

[dependencies]
clap = "2"
log = "0.3.0"
log4rs = "0.7.0"
rand = "0.4.2"
sawtooth-sdk = "0.4"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto"
assets = [
    ["packaging/systemd/sawtooth-devmode-engine-rust.service", "/lib/systemd/system/sawtooth-devmode-engine-rust.service", "640"],
    ["packaging/systemd/sawtooth-devmode-engine-rust", "/etc/default/sawtooth-devmode-engine-rust", "640"],
    ["target/release/devmode-engine-rust", "/usr/bin/devmode-engine-rust", "755"]
]
maintainer-scripts = "packaging/ubuntu"
